Keep whitespace in TypeView. Fixes #12.

--- a/styles/ocaml-merlin.atom-text-editor.less
+++ b/styles/ocaml-merlin.atom-text-editor.less
@@ -8,6 +8,7 @@
 
 #ocaml-merlin-bubble {
   color: darken(@text-color-info, 40%);
+  white-space: pre-wrap;
   background-color: fade(lighten(@background-color-info, 10%), 90%);
   border-radius: 0 @component-border-radius @component-border-radius @component-border-radius;
   padding: @space 2*@space;
